--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@700&display=swap" rel="stylesheet">
     
-    <title>Simple Password Generator Like This</title>
+    <title>Simple Password Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
